--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/ico" href="/DMLlogo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DML Gomme Formia</title>
+    <meta
+      name="description"
+      content="DML - Di Maio Luigi, il tuo gommista di fiducia a Formia. Offro una vasta gamma di servizi gommisti per auto, camion, moto e altri veicoli. Servizi di montaggio, equilibratura, riparazione e sostituzione pneumatici per viaggi sicuri e senza problemi."
+    />
+    <meta
+      name="keywords"
+      content="Formia, DML, Gommista, Pneumatici, Auto, Camion, Moto, Gomme, Di Maio Luigi"
+    />
+    <meta name="author" content="Claudia Parravano, github: @clxdia" />
   </head>
   <body>
     <div id="app"></div>
