--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="/DMLlogo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DML Gomme Formia</title>
+    <title>D.M.L. - Gommista a Formia</title>
     <meta
       name="description"
-      content="DML - Di Maio Luigi, il tuo gommista di fiducia a Formia. Offro una vasta gamma di servizi gommisti per auto, camion, moto e altri veicoli. Servizi di montaggio, equilibratura, riparazione e sostituzione pneumatici per viaggi sicuri e senza problemi."
+      content="D.M.L. - DI MAIO LUIGI. Via del Biancospino, 04023 Formia (LT). Telefono: 0771 736786. Orario: 7:45 - 12:45, 14:30 - 18:45. Offro una vasta gamma di servizi gommisti per auto, camion, moto e altri veicoli. Servizi di montaggio, equilibratura, riparazione e sostituzione pneumatici per viaggi sicuri e senza problemi."
     />
     <meta
       name="keywords"
