--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     />
     <meta
       name="keywords"
-      content="Formia, DML, Gommista, Pneumatici, Auto, Camion, Moto, Gomme, Di Maio Luigi"
+      content="Formia, DML, Gommista, Pneumatici, Auto, Camion, Moto, Gomme, Di Maio Luigi, Gommista a Formia comune, gommisti"
     />
     <meta name="author" content="Claudia Parravano, github: @clxdia" />
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
   </body>
 </html>
