change from png to webp

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="keywords"
-      content="Formia, DML, Gommista, Pneumatici, Auto, Camion, Moto, Gomme, Di Maio Luigi, Gommista a Formia comune, gommisti"
+      content="Formia, DML, Gommista, Pneumatici, Auto, Camion, Moto, Gomme, Di Maio Luigi, Gommista a Formia comune, gommisti, pneumatici"
     />
     <meta name="author" content="Claudia Parravano, github: @clxdia" />
   </head>
