--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="/DMLlogo.ico" />
+    <meta
+      name="google-site-verification"
+      content="xbW517rQqVumvRHqSfBakqSIqqRTd8_aJcbDCiOtg88"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>D.M.L. - Gommista a Formia</title>
     <meta
